--- a/index.html
+++ b/index.html
@@ -112,92 +112,98 @@
     </div>
 </div>
 
-<div class="container-fluid zp">
-    <div class="row">
-        <div class="col-sm-6 no-space">
-            <div class="grid">
-                <a href="web.html" class="thumb active" title="image">
-                   <img src="img/1.jpg">
-                   <div class="text-overlay">
-                        <!--<h1 class="text-center">1280x900</h1>-->
-                    </div>
-                </a>
-            </div>
-        </div>
-        <div class="col-sm-6 no-space">
-            <div id="slider2">
-                <figure id="scroll">
-                    <a href="web.html"><img src="img/2.jpg"></a>
-                    <a href="web.html"><img src="img/3.jpg"></a>
-                    <a href="web.html"><img src="img/4.jpg"></a>
-                    <a href="web.html"><img src="img/5.jpg"></a>
-                    <a href="web.html"><img src="img/2.jpg"></a>
-                </figure>
-            </div>
-
-        </div>
+<div class="row container-fluid zp">
+    <div class="col-sm-12" id="secMenu">
+        <h1 data-sr="enter top over 1s">
+            <span>click to see my projects!</span>
+            <a href=web.html" class="ghost-button">my works</a>
+        </h1>
     </div>
+    <!--<div class="row">-->
+        <!--<div class="col-sm-6 no-space">-->
+            <!--<div class="grid">-->
+                <!--<a href="web.html" class="thumb active" title="image">-->
+                   <!--<img src="img/1.jpg">-->
+                   <!--<div class="text-overlay">-->
+                        <!--&lt;!&ndash;<h1 class="text-center">1280x900</h1>&ndash;&gt;-->
+                    <!--</div>-->
+                <!--</a>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-sm-6 no-space">-->
+            <!--<div id="slider2">-->
+                <!--<figure id="scroll">-->
+                    <!--<a href="web.html"><img src="img/2.jpg"></a>-->
+                    <!--<a href="web.html"><img src="img/3.jpg"></a>-->
+                    <!--<a href="web.html"><img src="img/4.jpg"></a>-->
+                    <!--<a href="web.html"><img src="img/5.jpg"></a>-->
+                    <!--<a href="web.html"><img src="img/2.jpg"></a>-->
+                <!--</figure>-->
+            <!--</div>-->
+
+        <!--</div>-->
+    <!--</div>-->
 
     <div class="row">
         <div class="col-sm-12 n-mar-tb">
-           <div class="row">
-              <div class="col-sm-8">
-                 <div class="row">
-                    <div class="col-sm-6 no-space">
-                           <div class="grid">
-                        <a href="web.html" class="thumb active" title="image">
-                                <img src="img/6.jpg">
-                          <div class="text-overlay">
-                                 <!-- <h1 class="text-center">1280x674</h1>-->
-                            </div>
-                        </a>
-                           </div>
-                    </div>
+           <!--<div class="row">-->
+              <!--<div class="col-sm-8">-->
+                 <!--<div class="row">-->
+                    <!--<div class="col-sm-6 no-space">-->
+                           <!--<div class="grid">-->
+                        <!--<a href="web.html" class="thumb active" title="image">-->
+                                <!--<img src="img/6.jpg">-->
+                          <!--<div class="text-overlay">-->
+                                 <!--&lt;!&ndash; <h1 class="text-center">1280x674</h1>&ndash;&gt;-->
+                            <!--</div>-->
+                        <!--</a>-->
+                           <!--</div>-->
+                    <!--</div>-->
 
-                    <div class="col-sm-6 no-space">
-                      <div class="grid bgblue">
-                          <div id="caption2" data-sr="enter left over 0.6s">
-                              <img src="img/sep.gif" alt="separator">
-                              <a href="web.html"><img src="img/arrow.png" class="arrow" alt="arrow"></a>
-                              <h1>TRAIN YOUR TEAM</h1>
-                              <span>
-                                  <p>
-                                      From short and sweet sessions to get you on speed
-                                      with cutting edge technologies to full tracks
-                                      covering everything a modern web developer should know
-                                      (Focused on Javascript).
-                                  </p>
-                              </span>
-                          </div>
-                          <img src="img/spacer.png" alt="spacer" class="img-responsive">
-                      </div>
-                    </div>
+                    <!--<div class="col-sm-6 no-space">-->
+                      <!--<div class="grid bgblue">-->
+                          <!--<div id="caption2" data-sr="enter left over 0.6s">-->
+                              <!--<img src="img/sep.gif" alt="separator">-->
+                              <!--<a href="web.html"><img src="img/arrow.png" class="arrow" alt="arrow"></a>-->
+                              <!--<h1>TRAIN YOUR TEAM</h1>-->
+                              <!--<span>-->
+                                  <!--<p>-->
+                                      <!--From short and sweet sessions to get you on speed-->
+                                      <!--with cutting edge technologies to full tracks-->
+                                      <!--covering everything a modern web developer should know-->
+                                      <!--(Focused on Javascript).-->
+                                  <!--</p>-->
+                              <!--</span>-->
+                          <!--</div>-->
+                          <!--<img src="img/spacer.png" alt="spacer" class="img-responsive">-->
+                      <!--</div>-->
+                    <!--</div>-->
 
-                 </div>
-                 <div class="row">
-                    <div class="col-sm-12 no-space">
-                        <div class="grid">
-                            <a href="web.html" class="thumb active" title="image">
-                                    <img src="img/7.jpg" alt="photo sahara">
-                                <div class="text-overlay">
-                                    <!-- <h1 class="text-center">1280x338</h1> -->
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                 </div>
-              </div>
-              <div class="col-sm-4 no-space">
-                    <div class="grid">
-                        <a href="web.html" class="thumb active" title="image">
-                            <img src="img/8.jpg">
-                            <div class="text-overlay">
-                                 <!-- <h1 class="text-center">638x673</h1>-->
-                            </div>
-                        </a>
-                    </div>
-                 </div>
-           </div>
+                 <!--</div>-->
+                 <!--<div class="row">-->
+                    <!--<div class="col-sm-12 no-space">-->
+                        <!--<div class="grid">-->
+                            <!--<a href="web.html" class="thumb active" title="image">-->
+                                    <!--<img src="img/7.jpg" alt="photo sahara">-->
+                                <!--<div class="text-overlay">-->
+                                    <!--&lt;!&ndash; <h1 class="text-center">1280x338</h1> &ndash;&gt;-->
+                                <!--</div>-->
+                            <!--</a>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                 <!--</div>-->
+              <!--</div>-->
+              <!--<div class="col-sm-4 no-space">-->
+                    <!--<div class="grid">-->
+                        <!--<a href="web.html" class="thumb active" title="image">-->
+                            <!--<img src="img/8.jpg">-->
+                            <!--<div class="text-overlay">-->
+                                 <!--&lt;!&ndash; <h1 class="text-center">638x673</h1>&ndash;&gt;-->
+                            <!--</div>-->
+                        <!--</a>-->
+                    <!--</div>-->
+                 <!--</div>-->
+           <!--</div>-->
         </div>
     </div>
 
@@ -265,6 +271,35 @@
               </div>
               <div class="col-sm-8">
                  <div class="row">
+                      <div class="col-sm-6 no-space">
+                          <div class="grid bgwhite">
+                              <div id="caption5" data-sr="enter left over 0.6s">
+                                  <img src="img/sep-gray.gif" alt="separator">
+                                  <a href="web.html"><img src="img/arrow-gray.png" class="arrow" alt="arrow"></a>
+                                  <h1 class="gray">WE LOVE START-UPS</h1>
+                              <span class="gray">
+                                  <p>
+                                      With much experience in software engineering and with the startups world,
+                                      we are capable of building you an MVP that is lean, scalable and easy to pivot.
+                                  </p>
+                              </span>
+                              </div>
+                              <img src="img/spacer.png" alt="spacer" class="img-responsive">
+                          </div>
+                      </div>
+                      <div class="col-sm-6 no-space">
+                          <div class="grid">
+                              <a href="web.html" class="thumb active" title="image">
+                                  <img src="img/16.jpg">
+                                  <div class="text-overlay">
+                                      <!-- <h1 class="text-center">1280x674</h1>-->
+                                  </div>
+                              </a>
+                          </div>
+
+                      </div>
+                  </div>
+                 <div class="row">
                     <div class="col-sm-12 no-space">
                         <div class="grid">
                             <a href="web.html" class="thumb active" title="image">
@@ -277,63 +312,34 @@
 
                     </div>
                  </div>
-                 <div class="row">
-                    <div class="col-sm-6 no-space">
-                      <div class="grid bgwhite">
-                          <div id="caption5" data-sr="enter left over 0.6s">
-                              <img src="img/sep-gray.gif" alt="separator">
-                              <a href="web.html"><img src="img/arrow-gray.png" class="arrow" alt="arrow"></a>
-                              <h1 class="gray">WE LOVE START-UPS</h1>
-                              <span class="gray">
-                                  <p>
-                                      With much experience in software engineering and with the startups world,
-                                      we are capable of building you an MVP that is lean, scalable and easy to pivot.
-                                  </p>
-                              </span>
-                          </div>
-                         <img src="img/spacer.png" alt="spacer" class="img-responsive">
-                      </div>
-                    </div>
-                    <div class="col-sm-6 no-space">
-                    <div class="grid">
-                        <a href="web.html" class="thumb active" title="image">
-                                <img src="img/16.jpg">
-                            <div class="text-overlay">
-                                <!-- <h1 class="text-center">1280x674</h1>-->
-                            </div>
-                        </a>
-                        </div>
-
-                    </div>
-                 </div>
               </div>
            </div>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-sm-6 no-space">
-            <div class="grid">
-            <a href="web.html" class="thumb active" title="image">
-                <img src="img/17.jpg">
-                <div class="text-overlay">
-                    <!-- <h1 class="text-center">1280x900</h1>-->
-                </div>
-            </a>
-            </div>
-        </div>
-        <div class="col-sm-6 no-space">
-            <div id="slider4">
-                <figure>
-                    <a href="web.html"><img src="img/18.jpg"></a>
-                    <a href="web.html"><img src="img/19.jpg"></a>
-                    <a href="web.html"><img src="img/20.jpg"></a>
-                    <a href="web.html"><img src="img/21.jpg"></a>
-                    <a href="web.html"><img src="img/18.jpg"></a>
-                </figure>
-            </div>
-        </div>
-    </div>
+    <!--<div class="row">-->
+        <!--<div class="col-sm-6 no-space">-->
+            <!--<div class="grid">-->
+            <!--<a href="web.html" class="thumb active" title="image">-->
+                <!--<img src="img/17.jpg">-->
+                <!--<div class="text-overlay">-->
+                    <!--&lt;!&ndash; <h1 class="text-center">1280x900</h1>&ndash;&gt;-->
+                <!--</div>-->
+            <!--</a>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-sm-6 no-space">-->
+            <!--<div id="slider4">-->
+                <!--<figure>-->
+                    <!--<a href="web.html"><img src="img/18.jpg"></a>-->
+                    <!--<a href="web.html"><img src="img/19.jpg"></a>-->
+                    <!--<a href="web.html"><img src="img/20.jpg"></a>-->
+                    <!--<a href="web.html"><img src="img/21.jpg"></a>-->
+                    <!--<a href="web.html"><img src="img/18.jpg"></a>-->
+                <!--</figure>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 </div>
 
 <div class="container-fluid" id="technical">
