--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="col-sm-12" id="secMenu">
         <h1 data-sr="enter top over 1s">
             <span>click to see my projects!</span>
-            <a href=web.html" class="ghost-button">my works</a>
+            <a href="web.html" class="ghost-button">my works</a>
         </h1>
     </div>
     <!--<div class="row">-->
