--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/index.css" />
+    <link rel="shortcut icon" href="img/icons/favicon.png">
+    <link rel="stylesheet" href="css/index.css" />
 
 </head>
 <body>
