--- a/web.html
+++ b/web.html
@@ -85,38 +85,27 @@
                <p>&nbsp;</p>
                <div class="row card" data-sr="enter bottom over 0.6s">
                     <div class="col-md-4">
-                        <h1>GameDevs</h1>
-                        <p>Free Online Games & Adventure. Play our fun & popular games! Play for free and completely without ads!</p>
-                        <p><strong>Functions</strong><br />HTML5 / CSS3 / JS / AngularJS </p>
+                        <h1>KataRzis</h1>
+                        <p>Web app for finding the next train.... Fast.</p>
+                        <p><strong>Functions</strong><br />HTML5 / CSS3 / IONIC / AngularJS / MongoDB</p>
                         <p>&nbsp;</p>
-                        <a href="http://GameDevs.ofirnadav.com/" target="_blank"><p class="ghost-button-sub">Visit Website</p></a>
+                        <a href="http://katarzis.co/" target="_blank"><p class="ghost-button-sub">Visit Website</p></a>
                     </div>
-                <div class="col-md-8 m-img-top"><img src="img/web-gamedevs.jpg" class="img-responsive"></div>
+                <div class="col-md-8 m-img-top"><img src="img/phone-katarzis.jpg" class="img-responsive"></div>
                </div>
 
-                <!--<div class="row card" data-sr="enter bottom over 0.6s">-->
-                    <!--<div class="col-md-4">-->
-                        <!--<h1>Ferrucci</h1>-->
-                        <!--<p>Ferrucci specializes in high-quality products, which has a good reputation in the field of large markets in Saudi Arabia. The website was designed in a CMS framework.</p>-->
-                        <!--<p><strong>Functions</strong><br />HTML5 / CSS3 / RWD / CMS / PHP / JS</p>-->
-                        <!--<p>&nbsp;</p>-->
-                        <!--<a href="http://www.ferrucci-sa.com/" target="_blank"><p class="ghost-button-sub">Visit Website</p></a>-->
-                    <!--</div>-->
-                    <!--<div class="col-md-8 m-img-top"><img src="img/web-ferrucci-p.jpg" class="img-responsive"></div>-->
-                <!--</div>-->
-
-                <!--<div class="row card" data-sr="enter bottom over 0.6s">-->
-                    <!--<div class="col-md-4">-->
-                        <!--<h1>Toytown</h1>-->
-                        <!--<p>Toy Town is a pioneer indoor entertainment across the Kingdom of Saudi Arabia. I was lucky to create the website for them.</p>-->
-                        <!--<p><strong>Functions</strong>: HTML5 / CSS3 / RWD / PHP / JS</p>-->
-                        <!--<p>&nbsp;</p>-->
-                        <!--<a href="http://toytown.com.sa/" target="_blank"><p class="ghost-button-sub">Visit Website</p></a>-->
-                    <!--</div>-->
-                    <!--<div class="col-md-8 m-img-top"><img src="img/web-toytown.jpg" class="img-responsive"></div>-->
-                <!--</div>-->
+               <div class="row card" data-sr="enter bottom over 0.6s">
+                   <div class="col-md-4">
+                       <h1>GameDevs</h1>
+                       <p>Free Online Games & Adventure. Play our fun & popular games! Play for free and completely without ads!</p>
+                       <p><strong>Functions</strong><br />HTML5 / CSS3 / JS / AngularJS </p>
+                       <p>&nbsp;</p>
+                       <a href="http://GameDevs.ofirnadav.com/" target="_blank"><p class="ghost-button-sub">Visit Website</p></a>
+                   </div>
+                   <div class="col-md-8 m-img-top"><img src="img/web-gamedevs.jpg" class="img-responsive"></div>
+               </div>
                
-                <div class="row card" data-sr="enter bottom over 0.6s">
+               <div class="row card" data-sr="enter bottom over 0.6s">
                     <div class="col-md-4">
                         <h1>My Old Portfolio</h1>
                         <p>My first and old portfolio. Write on vanilla javascript and pure css</p>
@@ -127,7 +116,7 @@
                     <div class="col-md-8 m-img-top"><img src="img/web-oldPortfolio.jpg" class="img-responsive"></div>
                 </div>
 
-                 <div class="clearfix"></div>
+               <div class="clearfix"></div>
            </div>
         </div>
         <div class="col-sm-12" id="call">
