--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         <div class="col-md-4 pad">
             <p>2015 © ONV MISTERBIT INC</p>
         </div>
-        <!--<div class="col-md-4"><p>Hosted by &nbsp; <a href="http://www.webspaceph.com/" target="_blank"><img src="img/webspace.png" alt="logo webspace"></a></p></div>-->
+        <div class="col-md-4"><p>Hosted by &nbsp; <a href="https://github.com/OfirNadav" target="_blank"><img src="img/github.jpg" alt="logo github"></a></p></div>
         <div class="col-md-4 pad socialbot">
             <ul>
                 <li><a href="https://www.linkedin.com/in/OfirNadav" target="_blank"><span class="sociconbot">j</span></a></li>
@@ -416,8 +416,6 @@
 <p id="back-top"><a href="#top"><span></span></a></p>
 
 
-<!--<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>-->
-<!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>-->
 <script src="lib/jquery/1.11.3/jquery.min.js"></script>
 <script src="lib/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="js/preloader.min.js"></script>
