--- a/web.html
+++ b/web.html
@@ -123,7 +123,7 @@
             <h1 data-sr="enter top over 1s">
                 <span>I'd like to share you with my </span>
                 <a href="docs/ONV-Resume.pdf" class="ghost-button">CV</a> &nbsp;
-                <!--<a href="docs/JDC-Portfolio.pdf" class="ghost-button">Portfolio</a>-->
+                <!--<a href="docs/ONV-Portfolio.pdf" class="ghost-button">Portfolio</a>-->
             </h1>
         </div>
     </div>
@@ -132,7 +132,7 @@
         <div class="col-md-4 pad">
             <p>2015 © ONV MISTERBIT INC</p>
         </div>
-        <!--<div class="col-md-4"><p>Hosted by &nbsp; <a href="http://www.webspaceph.com/" target="_blank"><img src="img/webspace.png" alt="logo webspace"></a></p></div>-->
+        <div class="col-md-4"><p>Hosted by &nbsp; <a href="https://github.com/OfirNadav" target="_blank"><img src="img/github.jpg" alt="logo github"></a></p></div>
         <div class="col-md-4 pad socialbot">
             <ul>
                 <li><a href="https://www.linkedin.com/in/OfirNadav" target="_blank"><span class="sociconbot">j</span></a></li>
