--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 						<nav>
 							<ul class="cd-primary-nav">
 								<li><a href="index.html" class="selected">Home</a></li>
-								<li><a href="web.html">Works</a></li>
+								<li><a href="web.html">Portfolio</a></li>
 								<li><a href="about.html">About</a></li>
 							</ul>
 						</nav>
