--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <nav>
                             <ul class="cd-primary-nav">
                                 <li><a href="index.html" class="selected">Home</a></li>
-                                <li><a href="web.html">Works</a></li>
+                                <li><a href="web.html">Portfolio</a></li>
                                 <li><a href="about.html">About</a></li>
                             </ul>
                         </nav>
@@ -116,8 +116,8 @@
 <div class="row container-fluid zp">
     <div class="col-sm-12" id="secMenu">
         <h1 data-sr="enter top over 1s">
-            <span>click to see my projects!</span>
-            <a href="web.html" class="ghost-button">my works</a>
+            <span>click to see my portfolio!</span>
+            <a href="web.html" class="ghost-button">my projects</a>
         </h1>
     </div>
     <!--<div class="row">-->
