--- a/web.html
+++ b/web.html
@@ -39,7 +39,7 @@
                     <nav>
                         <ul class="cd-primary-nav">
                             <li><a href="index.html" class="selected">Home</a></li>
-                            <li><a href="web.html">Works</a></li>
+                            <li><a href="web.html">Portfolio</a></li>
                             <li><a href="about.html">About</a></li>
                         </ul>
                     </nav>
@@ -71,8 +71,8 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="caption-sub">
-                <h1 data-sr="enter top over 1s">Works</h1>
-                <span data-sr="enter bottom over 1s">Websites</span>
+                <h1 data-sr="enter top over 1s">Portfolio</h1>
+                <span data-sr="enter bottom over 1s">Projects</span>
             </div>
         </div>
     </div>
@@ -87,7 +87,7 @@
                     <div class="col-md-4">
                         <h1>KataRzis</h1>
                         <p>Web app for finding the next train.... Fast.</p>
-                        <p><strong>Functions</strong><br />HTML5 / CSS3 / IONIC / AngularJS / MongoDB</p>
+                        <p><strong>Functions</strong><br />HTML5 / CSS3 / IONIC / AngularJS / MongoDB / NodeJS</p>
                         <p>&nbsp;</p>
                         <a href="http://katarzis.co/" target="_blank"><p class="ghost-button-sub">Visit Website</p></a>
                     </div>
