gamedevs url changed

--- a/web.html
+++ b/web.html
@@ -100,7 +100,7 @@
                        <p>Free Online Games & Adventure. Play our fun & popular games! Play for free and completely without ads!</p>
                        <p><strong>Functions</strong><br />HTML5 / CSS3 / JS / AngularJS </p>
                        <p>&nbsp;</p>
-                       <a href="http://GameDevs.ofirnadav.com/" target="_blank"><p class="ghost-button-sub">Visit Website</p></a>
+                       <a href="http://gamedevs.eu.pn/" target="_blank"><p class="ghost-button-sub">Visit Website</p></a>
                    </div>
                    <div class="col-md-8 m-img-top"><img src="img/web-gamedevs.jpg" class="img-responsive"></div>
                </div>
