update crimes project

--- a/web.html
+++ b/web.html
@@ -85,6 +85,17 @@
                <p>&nbsp;</p>
                <div class="row card" data-sr="enter bottom over 0.6s">
                     <div class="col-md-4">
+                        <h1>Crimes Management</h1>
+                        <p>Web app for Chicago police department to manage crimes.</p>
+                        <p><strong>Functions</strong><br />HTML5 / CSS3 / AngularJS </p>
+                        <p>&nbsp;</p>
+                        <a href="//ofirnadav.com/dev/crimesMgmt" target="_blank"><p class="ghost-button-sub">Visit Website</p></a>
+                    </div>
+                <div class="col-md-8 m-img-top"><img src="img/web-crimes.jpg" class="img-responsive"></div>
+               </div>
+
+               <div class="row card" data-sr="enter bottom over 0.6s">
+                    <div class="col-md-4">
                         <h1>KataRzis</h1>
                         <p>Web app for finding the next train.... Fast.</p>
                         <p><strong>Functions</strong><br />HTML5 / CSS3 / IONIC / AngularJS / MongoDB / NodeJS</p>
